# rustfolio

./: Cargo.toml  LICENSE  test.db
portfolio/: README.md  index.html  package.json
portfolio/src/: App.vue  main.js
portfolio/src/components/: Home.vue
portfolio/src/components/Dashboard/: Dashboard.vue  DashboardBlog.vue  DashboardHeader.vue  DashboardHome.vue  DashboardSettings.vue  DashboardSidebar.vue
portfolio/src/components/Dashboard/DashboardSettings/: DashboardSiteSettingsInput.vue  DashboardSiteSettingsList.vue  DashboardSiteSettingsUpload.vue
portfolio/src/router/: index.js
portfolio/test/unit/: setup.js
portfolio/test/unit/specs/: Dashboard.spec.js
src/: README.md  blog.rs  dashboard.rs  db.rs  main.rs  models.rs
