[package]
name = "rustfolio"
version = "0.1.0"
authors = ["Jaka Stavanja <jakastavanja@gmail.com>"]

[dependencies]
rocket = "*"
rocket_codegen = "*"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = "0.9"
diesel_codegen = { version = "0.9", features = ["sqlite"] }
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
